Iphone animation flicker solved.

--- a/src/scss/layout/buttons.scss
+++ b/src/scss/layout/buttons.scss
@@ -261,6 +261,12 @@ input[type='submit'] {
 		}
 	}
 
+	@media (max-width: $breakpointMedium) {
+		.uk-button::before {
+			top: 50%;
+		}
+	}
+
 	@media (max-width: $breakpointXsmallMax) {
 		bottom: 62px;
 
@@ -269,7 +275,6 @@ input[type='submit'] {
 			height: 48px;
 
 			&::before {
-				top: 50%;
 				left: 38%;
 				font-size: 14px;
 			}
